docs/pages/versions/v56.0.0/sdk/ui/swift-ui/slider.mdx
---
title: 滑块
description: 一个用于从范围中选择数值的 SwiftUI Slider 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** 有关跨平台用法，请参见通用的 [`Slider`](../universal/slider) — 它会根据平台渲染相应的原生组件。

Expo UI Slider 与官方 SwiftUI [Slider API](https://developer.apple.com/documentation/swiftui/slider) 保持一致，允许从有界范围中选择数值。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/slider/ios-light.webp"
  darkSrc="/static/images/expo-ui/slider/ios-dark.webp"
  alt="Slider with brightness icons on either side, in a Form section"
/>

## 安装

<APIInstallSection />

## 用法

> **注意：** `Slider` 是一个可变宽度组件，它会扩展以填充可用的水平空间，并且没有内在宽度。当在 `Host` 上使用 `matchContents` 时，你应该在 `Slider` 上应用 [`frame`](modifiers/#frameparams) 修饰符，为其提供明确的宽度。或者，也可以通过 `style` 为 `Host` 指定明确的尺寸（例如，`style={{ width: 300 }}` 或 `style={{ flex: 1 }}`），或者将 `Slider` 放在像 `Form` 这样提供宽度约束的 SwiftUI 容器中。

### 基础滑块

```tsx BasicSliderExample.tsx
import { useState } from 'react';
import { Host, Slider } from '@expo/ui/swift-ui';

export default function BasicSliderExample() {
  const [value, setValue] = useState(0.5);

  return (
    <Host style={{ flex: 1 }}>
      <Slider value={value} onValueChange={setValue} />
    </Host>
  );
}
```

### 自定义范围的滑块

```tsx CustomRangeSliderExample.tsx
import { useState } from 'react';
import { Host, Slider } from '@expo/ui/swift-ui';

export default function CustomRangeSliderExample() {
  const [value, setValue] = useState(50);

  return (
    <Host style={{ flex: 1 }}>
      <Slider value={value} min={0} max={100} onValueChange={setValue} />
    </Host>
  );
}
```

### 带步进的滑块

使用 `step` 属性来定义离散增量。将 `step` 设为 `0` 以表示连续值。

```tsx SteppedSliderExample.tsx
import { useState } from 'react';
import { Host, Slider } from '@expo/ui/swift-ui';

export default function SteppedSliderExample() {
  const [value, setValue] = useState(0);

  return (
    <Host style={{ flex: 1 }}>
      <Slider value={value} min={0} max={100} step={10} onValueChange={setValue} />
    </Host>
  );
}
```

### 带标签的滑块

你可以为滑块添加标签，以描述其用途，并标记最小值和最大值的位置。

```tsx LabeledSliderExample.tsx
import { useState } from 'react';
import { Host, Slider, Text } from '@expo/ui/swift-ui';

export default function LabeledSliderExample() {
  const [value, setValue] = useState(50);

  return (
    <Host style={{ flex: 1 }}>
      <Slider
        value={value}
        min={0}
        max={100}
        label={<Text>音量</Text>}
        minimumValueLabel={<Text>0</Text>}
        maximumValueLabel={<Text>100</Text>}
        onValueChange={setValue}
      />
    </Host>
  );
}
```

## API

```tsx
import { Slider } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/slider" apiName="Slider" />
